--- a/css/curriculo.css
+++ b/css/curriculo.css
@@ -5,9 +5,9 @@
     font-family: 'Roboto', sans-serif;
 }
 
-body{
-    margin: 0;
-    padding: 0;
+body, html{
+    margin: ;0;
+    padding: 0
 }
 
 main{
@@ -17,7 +17,7 @@ main{
 #principal{
     display: flex;
     flex-direction: row;
-    margin: 0 auto;
+    margin: auto;
     width: 50vw;
     height: 100%;
     position: relative;
@@ -34,8 +34,8 @@ div[id^="conteudo"]{
 }
 
 #foto-perfil{
-    height: 155px;
-    width: 145px;
+    height: 160px;
+    width: 150px;
     border-radius: 100%;
 }
 
@@ -124,3 +124,99 @@ h2{
 a{
     text-decoration: none;
 }
+a:hover{
+    color: aqua;
+}
+
+@media (max-width:420px){
+    #principal{
+        display: flex;
+        flex-direction: column;
+        width: 100%;
+    }
+    
+    #cabecalho{
+        display: flex;
+        flex-direction: column;
+    }
+
+    #nome{
+        margin-top: 11px;
+    }
+
+    #p-contato{
+        font-size: 80%;
+    } 
+
+    #p-perfil,ul, li{
+        color: #222222;
+        font-size: 13px;
+    }
+
+    #principal{
+        float: left;
+    }
+
+    #container-left{
+        height: 100%;
+        width: 100%;
+    }
+    
+    #container-right{
+        height: 100%;
+        width: 100%;
+    }
+
+    #conhecimentos{
+        margin-top: 50px;
+    }
+
+    footer, #p-footer{
+        text-align: center;
+        display: flex;
+        flex-direction: column;
+        color: #FFFFFF;
+    }
+}
+
+@media (max-width:1400px){
+
+    #principal{
+        display: flex;
+        flex-direction: column;
+        width: 100%;
+    }
+
+    div[id^="conteudo"]{
+        margin:  3% 25%;
+    }    
+
+    #container-left{
+        height: 130%;
+        width: 100%;
+        
+    }
+
+    #cabecalho{
+        display: flex;
+        flex-direction: column;
+    }
+    
+    #container-right{
+        height: 110vh;
+        width: 100%;
+        padding-top: 10%;
+    }
+
+    #contato{
+        margin-top: 10%;
+    } 
+
+    footer, #p-footer{
+        text-align: center;
+        display: flex;
+        flex-direction: column;
+        color: #FFFFFF;
+    }
+
+} 
