--- a/css/curriculo.css
+++ b/css/curriculo.css
@@ -1,8 +1,7 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;1,100;1,300;1,400;1,500&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@1,100&display=swap');
 
 *{
     box-sizing: border-box;
-    font-family: 'Roboto', sans-serif;
 }
 
 body, html{
@@ -78,12 +77,14 @@ footer{
     text-align: center;
     position: absolute;
     bottom:0;
+    color:#133057;
     width: 100%;
+    margin-left: -4vw;
 }
 
 #container-right{
     height: 150vh;
-    width: 44vw;
+    width: 45vw;
     background-color: #19304F;
     color: #FFFFFF;
 }
@@ -172,10 +173,8 @@ a:hover{
     }
 
     footer, #p-footer{
-        text-align: center;
-        display: flex;
-        flex-direction: column;
-        color: #FFFFFF;
+
+        
     }
 }
 
