--- a/css/curriculo.css
+++ b/css/curriculo.css
@@ -48,11 +48,13 @@ div[id^="conteudo"]{
 }
 
 #nome-area{
-    margin-left: 11px;
+    margin-left: 15px;
+    color: #19304F;
 }
 
 #area{
-    margin: 0%;
+    margin-top: 2px;
+    margin-left: 8px;
 }
 
 h2[id^="h2"]{
